<resources>
    <string name="app_name">VendorApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="login_with_your_mobile_number">Login with your mobile number</string>
    <string name="your_name">Your Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="create_mpin">Create MPIN</string>
    <string name="get_otp">Get OTP</string>
    <string name="accept_terms_condition">By creating account, you accept terms and condition</string>
    <string name="name">Name</string>
</resources>