<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eef2f0"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:src="@drawable/ic_back"
            android:tint="@color/white" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:src="@drawable/ic_taste_for_health" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/login_with_your_mobile_number"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:background="@drawable/background_edit_text"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/your_name"
        android:paddingLeft="@dimen/_8sdp" />

    <EditText
        android:id="@+id/mobile_number"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_12sdp"
        android:background="@drawable/background_edit_text"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/mobile_number"
        android:paddingLeft="@dimen/_8sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/create_mpin"
        android:textAlignment="center"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/_14ssp" />

    <com.chaos.view.PinView
        android:id="@+id/pin_view"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_25sdp"
        android:cursorVisible="true"
        android:inputType="number"
        android:itemBackground="#65eaeaea"
        app:cursorColor="@color/black"
        app:hideLineWhenFilled="true"
        app:itemCount="4"
        app:itemHeight="@dimen/_40sdp"
        app:itemRadius="@dimen/_5sdp"
        app:itemWidth="@dimen/_40sdp"
        app:lineColor="@color/purple_500"
        app:lineWidth="@dimen/_1sdp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/text"
            android:layout_margin="@dimen/_12sdp"
            android:backgroundTint="@color/purple_500"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/get_otp" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_8sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/accept_terms_condition"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/_11ssp" />

    </RelativeLayout>
</LinearLayout>